# simple_someip

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  codecov.yml  cspell.json  release-plz.toml  release.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/simple_someip/plans/: 2026-06-09-phase22-125-memory-reduction-design.md  2026-06-10-pr1-124-followups-design.md  2026-06-10-pr1-124-followups.md  2026-06-11-128-embassy-union-rebase.md  2026-06-17-pr126-polled-port-handoff.md  2026-06-17-pr2-125-client-async-state-reduction.md  2026-06-17-pr3-125-server-buffer-extraction.md  2026-07-15-source-keyed-registry-design.md  2026-07-15-source-keyed-registry.md
docs/simple_someip/plans/baselines/: pr0-size-baseline.md
examples/: auto_client.rs  discovery_client.rs
examples/bare_metal/: Cargo.toml
examples/bare_metal/src/: main.rs
examples/bare_metal_client/: Cargo.toml
examples/bare_metal_client/src/: main.rs
examples/bare_metal_server/: Cargo.toml
examples/bare_metal_server/src/: main.rs
examples/client_server/: Cargo.toml
examples/client_server/src/: main.rs
examples/discovery_client/: Cargo.toml
examples/discovery_client/src/: main.rs
examples/embassy_net_client/: Cargo.toml
examples/embassy_net_client/src/: main.rs
examples/mock_server/: Cargo.toml
examples/mock_server/src/: main.rs
examples/someip_peer/: Cargo.toml
examples/someip_peer/src/: main.rs
simple-someip-embassy-net/: CHANGELOG.md  Cargo.toml  README.md
simple-someip-embassy-net/src/: factory.rs  lib.rs  socket.rs
simple-someip-embassy-net/tests/: loopback.rs
src/: bare_metal_tasks.rs  buffer_pool.rs  client.rs  embassy_channels.rs  error.rs  heapless_payload.rs  lib.rs  log.rs  net_endpoint.rs  polled.rs  raw_payload.rs  runtime.rs  sd_codec.rs  single_context_mutex.rs  tokio_transport.rs  traits.rs  transport.rs
src/adapters/: mod.rs  tokio.rs
src/bare_metal_runtime/: mailbox.rs  mod.rs  runtime.rs  transport.rs
src/client/: bind_dispatch.rs  discovery_info.rs  error.rs  inner.rs  mod.rs  service_registry.rs  session.rs  socket_manager.rs  tokio_impl.rs  wire.rs
src/client/no_std/: mod.rs
src/e2e/: config.rs  crc.rs  e2e_checker.rs  e2e_protector.rs  error.rs  mod.rs  registry.rs  state.rs
src/executors/: mod.rs  polled.rs
src/protocol/: byte_order.rs  error.rs  header.rs  message.rs  message_id.rs  message_type.rs  mod.rs  return_code.rs
src/protocol/sd/: entry.rs  error.rs  event_group_entry.rs  flags.rs  header.rs  mod.rs  options.rs  service_entry.rs  test_support.rs
src/server/: README.md  error.rs  event_publisher.rs  mod.rs  runtime.rs  sd_state.rs  service_info.rs  subscription_manager.rs
src/someip/: error.rs  header.rs  message.rs  message_type.rs  mod.rs  return_code.rs
src/static_channels/: buffer_pool.rs  mod.rs
src/transport/: callback.rs  mod.rs
tests/: bare_metal_client.rs  bare_metal_client_local.rs  bare_metal_e2e.rs  bare_metal_example_builds.rs  bare_metal_server.rs  buffer_pool.rs  client_server.rs  no_alloc_server_witness.rs  no_alloc_witness.rs  static_channels_alloc_witness.rs  vsomeip_sd_compat.rs
tests/data/vsomeip-offerer/: CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  offerer.cpp  offerer.json  subscriber.cpp  subscriber.json
tools/: capture_type_sizes.sh
tools/size_probe/: Cargo.toml
tools/size_probe/src/: lib.rs
