[workspace]
members = [".", "examples/discovery_client", "examples/client_server"]

[package]
name = "simple-someip"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A lightweight SOME/IP serialization and communication library"
repository = "https://github.com/luminartech/simple_someip"

[dependencies]
crc = "3.4"
embedded-io = { version = "0.7" }
heapless = "0.9"
socket2 = { version = "0.5", optional = true, features = ["all"] }
thiserror = { version = "2", optional = true }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "sync",
    "time",
], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3"

[features]
default = ["std"]
std = ["embedded-io/std", "dep:thiserror", "dep:tracing"]
client = ["std", "dep:tokio", "dep:socket2", "tokio-adapter"]
server = ["std", "dep:tokio", "dep:socket2", "tokio-adapter"]
# Runtime-agnostic AsyncUdpSocket / Clock traits for embedded targets.
# Opt-in during the runtime-agnostic refactor; will become default in a
# later phase once the generic client/server consume the traits.
runtime-traits = []
# Tokio implementation of the runtime traits — for desktop/host code that
# wants to drive the generic client/server with tokio. Includes a
# TokioSocketFactory that opens sockets via socket2 + tokio.
tokio-adapter = ["runtime-traits", "std", "dep:tokio", "dep:socket2"]
# Sync-polled mini-executor (executors::polled) for no_std embedded
# targets that drive Rust from an external tick. Pairs with the
# runtime-traits abstraction; needs no other deps.
polled-executor = []
# no_std SOME/IP client/server that uses heapless-backed state and
# the runtime-agnostic socket/clock traits. For embedded firmware
# that cannot pull in tokio::sync / std collections.
no_std-client = ["runtime-traits"]
# Callback-driven no_std transport: AsyncUdpSocket / Clock /
# SocketFactory impls that forward to a host-provided
# TransportCallbacks trait, typically backed by a C network stack.
callback-transport = ["runtime-traits"]

[[test]]
name = "client_server"
required-features = ["client", "server"]
