[workspace]
members = [".", "examples/discovery_client", "examples/client_server"]

[package]
name = "simple-someip"
version = "0.7.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A lightweight SOME/IP serialization and communication library"
repository = "https://github.com/luminartech/simple_someip"

[dependencies]
crc = "3.4"
embedded-io = { version = "0.7" }
heapless = "0.9"
# Path dep during development; swap to `version = "0.1"` from crates.io
# before publishing simple_someip 0.8.0. The `registry` feature provides
# `simple_e2e::registry::Registry<K, CAP>` which simple_someip wraps as
# `E2ERegistry` keyed on `E2EKey`.
simple_e2e = { path = "../simple_e2e", default-features = false, features = ["registry"] }
socket2 = { version = "0.5", optional = true, features = ["all"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "sync",
    "time",
], optional = true }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3"

[features]
default = ["std"]
std = ["embedded-io/std", "thiserror/std", "tracing/std"]
client = ["std", "dep:tokio", "dep:socket2"]
server = ["std", "dep:tokio", "dep:socket2"]

[[test]]
name = "client_server"
required-features = ["client", "server"]
