[package]
name = "bare_metal_client"
version = "0.0.0"
edition = "2024"
publish = false

# `simple-someip` is compiled with `default-features = false,
# features = ["client", "bare_metal"]` — no tokio, no socket2 pulled in
# by the crate itself. The example binary adds tokio only for its own
# executor and mock driver; real firmware would use embassy_executor or
# a similar bare-metal async runtime instead.
[dependencies]
# `std` enabled here so the example can use the std-only `RawPayload`
# convenience type. Real firmware drops `"std"` and provides its own
# `PayloadWireFormat` implementation (RawPayload uses heap `Vec` for
# its SD-header storage and is unsuitable for true no_std). The
# `client + bare_metal` shape — pure no_std-clean trait surface — is
# verified by the cortex-m4f cross-build in CI; this host example
# additionally exercises the runtime end-to-end.
simple-someip = { path = "../..", default-features = false, features = ["std", "client", "bare_metal"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
# Provides the host platform critical-section implementation required by
# embassy-sync (pulled in via simple-someip's bare_metal feature).
critical-section = { version = "1", features = ["std"] }
# Used directly by this example's `static StaticE2EStorage`
# declaration to spell the `BlockingMutex<CriticalSectionRawMutex,
# RefCell<E2ERegistry>>` type. Version pin matches what
# simple-someip's `bare_metal` feature pulls transitively (so we
# don't accidentally fork the dep tree).
embassy-sync = "0.6"
