[package]
name = "mock_server"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
simple-someip = { path = "../..", features = ["server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
